--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
     "theme": "tvpage",
     "disablePathToLower": true,
     "enableRobotsTXT": true,
-    "galleryChannelIds": "",
+    "galleryChannelIds": "123626857",
     "params": {
         "loginId": "1758991",
         "subfolder": "\/newproject",
